<resources>
    <string name="app_name">Tugas-UAS-AKB-10116102</string>

    <string name="title1">Profile</string>
    <string name="title2">Contact</string>
    <string name="title3">Friends</string>
    <string name="descripton1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="profile">Profile berisi data diri pembuat yang terdiri dari foto, nama, nim, kelas dan data diri KTP</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
