<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/profile"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/title1"
        android:textSize="26sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/lato_regular"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/descripton1"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sliderOneNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:text="@string/next"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/lato_light"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</LinearLayout>